--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
-</html>
+  ---
+    layout: default # Or the specific layout name provided by your theme
+    ---
+    <!doctype html>
+    <html>
+    <head>
+      <title>Your Site Title</title>
+    </head>
+    <body>
+      {{ content }}
+      <!-- Your custom HTML content for the index page goes here -->
+    </body>
+    </html>
