--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
   ---
-    layout: default # Or the specific layout name provided by your theme
+    layout: default # Or the specific layout name provided by  theme
     ---
     <!doctype html>
     <html>
